// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CourseListRow > renders completed course correctly (snapshot) 1`] = `
<div>
  <div>
    <div
      class="border-x border-t    border-charcoal-light   transition-colors duration-200 group "
    >
      <div
        class="p-4 sm:px-8 sm:py-6"
      >
        <div
          class="flex flex-col gap-4 sm:hidden"
        >
          <div
            class="flex items-start gap-3"
          >
            <div
              class="flex-1 min-w-0"
            >
              <h3
                class="font-semibold text-size-md text-black text-pretty"
              >
                Introduction to AI Safety
              </h3>
              <p
                class="flex items-center gap-1.5 mt-1.5 text-size-xs font-medium text-gray-500 leading-4"
              >
                Completed on Jan 1, 2024
                <span
                  class="inline-flex items-center justify-center size-3.5 bg-gray-500 rounded-full"
                >
                  <svg
                    class="size-1.5 text-white"
                    fill="currentColor"
                    height="1em"
                    stroke="currentColor"
                    stroke-width="0"
                    viewBox="0 0 448 512"
                    width="1em"
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                    />
                  </svg>
                </span>
              </p>
            </div>
          </div>
          <div
            class="flex"
          >
            <a
              class="cta-button flex items-center justify-center transition-all duration-200 whitespace-nowrap cursor-pointer not-prose disabled:opacity-50 disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:pointer-events-none text-[13px] px-3 py-2.5 h-9 rounded-md font-semibold cta-button--black bg-bluedot-darker link-on-dark hover:bg-bluedot-darkest w-full"
              href="/certification?id=cert-123"
              tabindex="0"
            >
              View your certificate
            </a>
          </div>
        </div>
        <div
          class="hidden sm:flex items-center gap-4"
        >
          <div
            class="flex-1 min-w-0"
          >
            <h3
              class="font-semibold text-size-base text-gray-900 leading-normal"
            >
              Introduction to AI Safety
            </h3>
            <p
              class="flex items-center gap-1.5 mt-0.5 text-size-xs font-medium text-gray-500 leading-4"
            >
              Completed on Jan 1, 2024
              <span
                class="inline-flex items-center justify-center size-3.5 bg-gray-500 rounded-full"
              >
                <svg
                  class="size-1.5 text-white"
                  fill="currentColor"
                  height="1em"
                  stroke="currentColor"
                  stroke-width="0"
                  viewBox="0 0 448 512"
                  width="1em"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <path
                    d="M438.6 105.4c12.5 12.5 12.5 32.8 0 45.3l-256 256c-12.5 12.5-32.8 12.5-45.3 0l-128-128c-12.5-12.5-12.5-32.8 0-45.3s32.8-12.5 45.3 0L160 338.7 393.4 105.4c12.5-12.5 32.8-12.5 45.3 0z"
                  />
                </svg>
              </span>
            </p>
          </div>
          <div
            class="flex items-center gap-3 flex-shrink-0"
            role="presentation"
          >
            <a
              class="cta-button flex items-center justify-center transition-all duration-200 w-fit whitespace-nowrap cursor-pointer not-prose disabled:opacity-50 disabled:pointer-events-none aria-disabled:opacity-50 aria-disabled:pointer-events-none text-[13px] px-3 py-2.5 h-9 rounded-md font-semibold cta-button--black bg-bluedot-darker link-on-dark hover:bg-bluedot-darkest"
              href="/certification?id=cert-123"
              tabindex="0"
            >
              View your certificate
            </a>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`CourseListRow > renders in-progress course correctly (snapshot) 1`] = `
<div>
  <div>
    <div
      aria-expanded="true"
      class="border-x border-t    border-charcoal-light bg-white  transition-colors duration-200 group cursor-pointer"
      role="button"
      tabindex="0"
    >
      <div
        class="p-4 sm:px-8 sm:py-6"
      >
        <div
          class="flex flex-col gap-4 sm:hidden"
        >
          <div
            class="flex items-start gap-3"
          >
            <div
              class="flex-1 min-w-0"
            >
              <h3
                class="font-semibold text-size-md text-black text-pretty"
              >
                Introduction to AI Safety
              </h3>
            </div>
            <button
              aria-expanded="true"
              aria-label="Collapse Introduction to AI Safety details"
              class="size-9 flex items-center justify-center hover:bg-gray-100 rounded-md transition-all duration-150 flex-shrink-0"
              type="button"
            >
              <svg
                class="transition-transform duration-200 rotate-90"
                fill="none"
                height="20"
                viewBox="0 0 20 20"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.5 5L12.5 10L7.5 15"
                  stroke="#1F2937"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </button>
          </div>
        </div>
        <div
          class="hidden sm:flex items-center gap-4"
        >
          <div
            class="flex-1 min-w-0"
          >
            <h3
              class="font-semibold text-size-base text-gray-900 leading-normal"
            >
              Introduction to AI Safety
            </h3>
          </div>
          <div
            class="flex items-center gap-3 flex-shrink-0"
            role="presentation"
          >
            <button
              aria-expanded="true"
              aria-label="Collapse Introduction to AI Safety details"
              class="size-9 flex items-center justify-center hover:bg-gray-100 rounded-md transition-all duration-150"
              type="button"
            >
              <svg
                class="transition-transform duration-200 rotate-90"
                fill="none"
                height="20"
                viewBox="0 0 20 20"
                width="20"
                xmlns="http://www.w3.org/2000/svg"
              >
                <path
                  d="M7.5 5L12.5 10L7.5 15"
                  stroke="#1F2937"
                  stroke-linecap="round"
                  stroke-linejoin="round"
                  stroke-width="1.5"
                />
              </svg>
            </button>
          </div>
        </div>
      </div>
    </div>
    <div
      aria-label="Expanded details for Introduction to AI Safety"
    >
      Course Details Content
    </div>
  </div>
</div>
`;
